# The-AI-Engineer-Challenge

./: .gitignore
api/: README.md  app.py  pyproject.toml  requirements.txt
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  ChatInterfaceGalaga.tsx  Spaceship.tsx
